# ai-news-bot

./: .env.example  .gitignore  CHANGES_SUMMARY.md  DATABASE_MIGRATION_FIX.md  NEWS_SEARCH_IMPROVEMENTS.md  QUICK_RESEARCH_GUIDE.md  README.md  RESEARCH_EXPANSION.md  SEARCH_IMPROVEMENTS_SUMMARY.md  migrate_database.py  pyproject.toml
ai_news_bot/: cli_search.py  config.py  database.py  main.py
ai_news_bot/docs/: LOCAL_MODELS_SETUP.md  SYSTEMD_SERVICE_GUIDE.md
ai_news_bot/news_sources/: __init__.py  arxiv.py  base.py  perplexity_search.py  rss_feeds.py  web_scraper.py
ai_news_bot/summarizer/: __init__.py  base.py  deepseek_summarizer.py  local_summarizer.py  openai_summarizer.py
ai_news_bot/telegram/: __init__.py  bot.py
ai_news_bot/test/: test_connectivity.py  test_installation.py
ai_news_bot/utils/: __init__.py  bot_info.py  content_analyzer.py  fix_ssl.py  fix_systemd_service.sh  helpers.py  logger.py  model_optimizer.py  search.py  setup_pi.sh  setup_systemd_service.sh  telegram_setup_helper.py
examples/: search_examples.py
